# TSLogAnalyzer

./: .gitignore  .stylish-haskell.yaml  Makefile  README.md  TSLogAnalyzer.cabal  default.nix  shell.nix
executable/: Main.hs
src/: Main.hs  TimeParse.hs
