author:                 Remy Goldschmidt
version:                0.0.1
build-type:             Simple
cabal-version:          >= 1.10
category:               Utility
copyright:              2014-2015 Remy Goldschmidt <taktoa@gmail.com>
description:            Analyzes TeamSpeak 3 server log files
extra-source-files:     CHANGELOG.md CONTRIBUTING.md README.md
license-file:           LICENSE.md
license:                MIT
maintainer:             taktoa@gmail.com
name:                   TSLogAnalyzer
synopsis:               Analyzes TeamSpeak 3 server log files
tested-with:            GHC == 7.10

library
    build-depends:      base <5
                      , classy-prelude
                      , containers
                      , hashable
                      , ListLike
                      , time

                      , base-unicode-symbols
                      , containers-unicode-symbols

                      , mtl
                      , text
                      , extra
                      , attoparsec
                      , configurator
    default-language:   Haskell2010
    exposed-modules:    Utility.TSLogAnalyzer
                      , Utility.TSLogAnalyzer.Util
                      , Utility.TSLogAnalyzer.Log
                      , Utility.TSLogAnalyzer.Parse
                      , Utility.TSLogAnalyzer.MsgParse
                      , Utility.TSLogAnalyzer.TimeParse
    ghc-options:        -Wall -fno-warn-type-defaults
    ghc-prof-options:   -auto-all -prof
    hs-source-dirs:     library
    default-extensions: OverloadedStrings
                      , UnicodeSyntax

executable TSLogAnalyzer
    build-depends:      base
                      , TSLogAnalyzer
    default-language:   Haskell2010
    ghc-options:        -threaded
    ghc-prof-options:   -auto-all -prof
    hs-source-dirs:     executable
    main-is:            Main.hs
    default-extensions: UnicodeSyntax
