name:                   TSLogAnalyzer
author:                 Remy Goldschmidt
version:                0.0.1
build-type:             Simple
cabal-version:          >= 1.10
category:               Utility
copyright:              2014-2017 Remy Goldschmidt <taktoa@gmail.com>
description:            Analyzes TeamSpeak 3 server log files
extra-source-files:     CHANGELOG.md CONTRIBUTING.md README.md
license-file:           LICENSE.md
license:                MIT
maintainer:             taktoa@gmail.com
synopsis:               Analyzes TeamSpeak 3 server log files
tested-with:            GHC == 8.0

library
    build-depends:      base < 5
                      , flow
                      , classy-prelude
                      , containers
                      , unordered-containers
                      , fingertree
                      , hashable
                      , ListLike
                      , time
                      , mtl
                      , transformers
                      , lens
                      , text
                      , text-icu
                      , extra
                      , attoparsec
                      , configurator
    default-language:   Haskell2010
    exposed-modules:    Utility.TSLogAnalyzer
                      , Utility.TSLogAnalyzer.Util
                      , Utility.TSLogAnalyzer.BiMultiMap
                      , Utility.TSLogAnalyzer.Log
                      , Utility.TSLogAnalyzer.Parse
                      , Utility.TSLogAnalyzer.MsgParse
                      , Utility.TSLogAnalyzer.TimeParse
    ghc-options:        -Wall
                        -fno-warn-type-defaults
                        -fno-warn-unused-imports
                        -fno-warn-unused-do-bind
    hs-source-dirs:     library

executable TSLogAnalyzer
    build-depends:      base
                      , TSLogAnalyzer
    default-language:   Haskell2010
    ghc-options:        -threaded
    hs-source-dirs:     executable
    main-is:            Main.hs
